--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,28 @@
     <title>
         <%= htmlWebpackPlugin.options.title %>
     </title>
+    <link rel="stylesheet" type="text/css" href="https://cdn.wpcc.io/lib/1.0.2/cookieconsent.min.css" />
+    <script src="https://cdn.wpcc.io/lib/1.0.2/cookieconsent.min.js" defer></script>
+    <script>
+        window.addEventListener("load", function() {
+            window.wpcc.init({
+                "border": "thin",
+                "corners": "large",
+                "colors": {
+                    "popup": {
+                        "background": "#1a3242",
+                        "text": "#ffffff",
+                        "border": "#b3d0e4"
+                    },
+                    "button": {
+                        "background": "#b3d0e4",
+                        "text": "#000000"
+                    }
+                },
+                "position": "bottom"
+            })
+        });
+    </script>
 
 </head>
 
